--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <spring.security.version>5.4.7</spring.security.version> <!-- 用于core的scope依赖 -->
     <easy-captcha.version>1.6.2</easy-captcha.version>
     <jjwt.version>0.9.1</jjwt.version>
-    <binarywang.weixin.java.version>4.1.0</binarywang.weixin.java.version>
+    <binarywang.weixin.java.version>4.3.0</binarywang.weixin.java.version>
     <rocketmq.spring.boot.starter.version>2.2.0</rocketmq.spring.boot.starter.version>
     <aliyun-openservices-ons-client.version>1.8.8.1.Final</aliyun-openservices-ons-client.version>
 
@@ -127,13 +127,13 @@
         <!--wx_pay  https://github.com/wechat-group/WxJava  -->
         <dependency>
             <groupId>com.github.binarywang</groupId>
-            <artifactId>weixin-java-pay</artifactId>
+            <artifactId>wx-java-pay-spring-boot-starter</artifactId>
             <version>${binarywang.weixin.java.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.github.binarywang</groupId>
-            <artifactId>weixin-java-mp</artifactId>
+            <artifactId>wx-java-miniapp-spring-boot-starter</artifactId>
             <version>${binarywang.weixin.java.version}</version>
         </dependency>
 
